# Syntra

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
agents/syntra-agent/: Cargo.toml
agents/syntra-agent/config/: dev.toml
agents/syntra-agent/src/: lib.rs  main.rs
agents/syntra-agent/src/agent/: deploy.rs  mod.rs  state.rs
agents/syntra-agent/src/cli/: config.rs  mod.rs
agents/syntra-agent/src/connection/: mod.rs  protocol.rs  websocket.rs
agents/syntra-agent/src/runtime/: adapter.rs  mod.rs
agents/syntra-agent/src/runtime/docker/: adapter.rs  mod.rs
apps/dashboard/: .env.example  docker-compose.yml  drizzle.config.ts  next.config.js  package.json  tsconfig.json
apps/dashboard/.claude/: settings.local.json
apps/dashboard/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/dashboard/src/: middleware.ts
apps/dashboard/src/app/: globals.css  layout.tsx  not-found.tsx
docs/: BACKLOG.md  DEVELOPMENT_PLAN.md  MILESTONE.md  PRD.md
docs/specs/: INTERFACE_CONTRACTS.md  SETUP_MONOREPO_DEVOPS.md  WORKSTREAM_AGENT.md  WORKSTREAM_CONTROL_PLANE.md
infra/docker/: docker-compose.yml
infra/docker/init-scripts/clickhouse/: 01-init.sql
infra/docker/init-scripts/postgres/: 01-init.sql
scripts/: install.sh  setup.sh
services/build-worker/: Dockerfile  package.json  tsup.config.ts
services/build-worker/src/: config.ts  db.ts  index.ts  logger.ts  redis.ts  types.ts  worker.ts
services/build-worker/src/steps/: build.ts  clone.ts  push.ts
services/notification-worker/: Dockerfile  package.json
services/notification-worker/src/: config.ts  context.ts  db.ts  index.ts  types.ts  worker.ts
services/notification-worker/src/channels/: discord.ts  email.ts  pagerduty.ts  slack.ts  webhook.ts
services/telemetry-ingest/: package.json
services/telemetry-ingest/schema/: 001_init.sql
services/telemetry-ingest/src/: clickhouse.ts  consumer.ts  index.ts  types.ts
services/telemetry-ingest/src/writers/: errors.ts  logs.ts  metrics.ts  traces.ts
services/telemetry-ingest/tests/: consumer.test.ts  logs-writer.test.ts  metrics-writer.test.ts  traces-writer.test.ts
(+303 files in other folders)
