[workspace]
resolver = "2"
members = [
    "agents/syntra-agent",
    "packages/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Syntra <team@syntra.catalystlabs.id>"]
license = "Apache-2.0"
repository = "https://github.com/syntra-dev/syntra"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.11", features = ["rustls-tls", "json", "gzip"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Docker
bollard = "0.15"

# Compression
zstd = "0.13"
