[package]
name = "syntra-agent"
description = "Syntra Agent - Runtime agent for container orchestration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "syntra-agent"
path = "src/main.rs"

[lib]
name = "syntra_agent"
path = "src/lib.rs"

[dependencies]
# From workspace
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
bollard.workspace = true
reqwest.workspace = true
zstd.workspace = true
base64.workspace = true
toml.workspace = true

# Additional dependencies
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
axum = "0.7"
tonic = "0.10"
prost = "0.12"
hostname = "0.3"
async-trait = "0.1"
